--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,32 @@ body {
 	font-weight: 400;
 	color: rgb(50, 50, 50);
 	background-color: rgba(100, 100, 100, 0.1);
+	margin: 0;
+	padding: 0;
+}
+
+html, body {
+    height: 100%;
+}
+
+ p {
+	color: white;
+	font-size: 100px;
+	z-index: 500;
+	vertical-align: middle;
+	text-align: center;
+	position: absolute;
+	margin: 200px;
+
+
+  
+}
+
+#wrap {
+	background-image: url(../images/ville.jpeg);
+	height: 100%;
+	width: 100%;
+
 }
 
 .centered {
